unpackaged/main/default/objects/Domain_Map__c/Domain_Map__c.object-meta.xml
<CustomObject>
    <label>Domain Map</label>
    <nameField>
        <label>Domain Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Domain Maps</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>