unpackaged/main/default/objects/Domain_Map__c/fields/Do_not_merge_accounts__c.field-meta.xml
<CustomField>
    <fullName>Do_not_merge_accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not merge accounts</label>
    <type>Checkbox</type>
</CustomField>