unpackaged/main/default/objects/Domain_Map__c/fields/Domain_Validation__c.field-meta.xml
<CustomField>
    <fullName>Domain_Validation__c</fullName>
    <description>Used to validate existing Domain Maps associated with Account records.</description>
    <inlineHelpText>Used to validate existing Domain Maps associated with Account records.</inlineHelpText>
    <label>Domain Validation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Wrong Company</fullName>
            </value>
            <value>
                <fullName>Invalid Domain</fullName>
            </value>
            <value>
                <fullName>Invalid Website</fullName>
            </value>
            <value>
                <fullName>Invalid Domain/Website</fullName>
            </value>
            <value>
                <fullName>Trash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>