unpackaged/main/default/objects/Domain_Map__c/fields/Domain_Validation_Details__c.field-meta.xml
<CustomField>
    <fullName>Domain_Validation_Details__c</fullName>
    <label>Domain Validation Details</label>
    <type>TextArea</type>
</CustomField>