unpackaged/main/default/objects/Domain_Map__c/fields/Domain_Validation_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Domain_Validation_Last_Updated__c</fullName>
    <description>Date of when the Domain Validation field was most recently updated.</description>
    <inlineHelpText>Date of when the Domain Validation field was most recently updated.</inlineHelpText>
    <label>Domain Validation Last Updated</label>
    <type>Date</type>
</CustomField>