unpackaged/main/default/objects/Domain_Map__c/fields/Is_Account_Primary_Domain_Map__c.field-meta.xml
<CustomField>
    <fullName>Is_Account_Primary_Domain_Map__c</fullName>
    <formula>Id = Matched_Account__r.Website_Domain_Map__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Account Primary Domain Map?</label>
    <type>Checkbox</type>
</CustomField>