unpackaged/main/default/objects/Domain_Map__c/fields/Is_Suspect_Domain__c.field-meta.xml
<CustomField>
    <fullName>Is_Suspect_Domain__c</fullName>
    <description>Flags domains for review if the length is greater than 40 characters or does not contain a period.</description>
    <formula>(LEN(Name) &gt; 40 || NOT(CONTAINS(Name,&#39;.&#39;))) &amp;&amp; ISBLANK(TEXT(Domain_Validation__c))</formula>
    <inlineHelpText>Flags domains for review if the length is greater than 40 characters or does not contain a period.</inlineHelpText>
    <label>Is Suspect Domain?</label>
    <type>Checkbox</type>
</CustomField>