unpackaged/main/default/objects/Domain_Map__c/fields/Matched_Account__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matched Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Domain Maps</relationshipLabel>
    <relationshipName>Domain_Maps</relationshipName>
    <type>Lookup</type>
</CustomField>