unpackaged/main/default/objects/Domain_Map__c/validationRules/name_no_change.validationRule-meta.xml
<ValidationRule>
    <fullName>name_no_change</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Name) &amp;&amp; NOT(ISNEW())</errorConditionFormula>
    <errorMessage>Cannot change domain map name</errorMessage>
</ValidationRule>