unpackaged/main/default/objects/Domain_Map__c/validationRules/name_unique.validationRule-meta.xml
<ValidationRule>
    <fullName>name_unique</fullName>
    <active>true</active>
    <errorConditionFormula>VLOOKUP($ObjectType.Domain_Map__c.Fields.Name,$ObjectType.Domain_Map__c.Fields.Name,Name)=Name
&amp;&amp; (ISNEW() || ISCHANGED(Name))</errorConditionFormula>
    <errorMessage>Domain map already exists</errorMessage>
</ValidationRule>