unpackaged/main/default/objects/Domain_Map__c/validationRules/no_mapped_acct_public_domains.validationRule-meta.xml
<ValidationRule>
    <fullName>no_mapped_acct_public_domains</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Type__c,&quot;Public&quot;) &amp;&amp; NOT(ISBLANK(Matched_Account__c))</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Cannot map an account to a public domain</errorMessage>
</ValidationRule>