unpackaged/main/default/objects/Domain_Map__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Matched_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>