unpackaged/main/default/objects/Domain_Map__c/listViews/Corporate.listView-meta.xml
<ListView>
    <fullName>Corporate</fullName>
    <columns>NAME</columns>
    <columns>Matched_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Corporate</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>katch</value>
    </filters>
    <label>Corporate</label>
</ListView>