unpackaged/main/default/objects/Domain_Map__c/listViews/Public.listView-meta.xml
<ListView>
    <fullName>Public</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Domain_Validation__c</columns>
    <columns>Domain_Validation_Details__c</columns>
    <columns>Domain_Validation_Last_Updated__c</columns>
    <columns>Matched_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Public</value>
    </filters>
    <label>Public</label>
</ListView>